--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
         <link rel="stylesheet" href="/css/stylesLogin.css">
         
         <link rel="stylesheet" href="/css/editPassAndEmail.css">
-    <title>React App</title>
+    <title>Carrito - Limberth</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
